# acton

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  ACTON_TEST_USER_FACING_AUDIT.md  Acton.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Counter2.tolk  Dockerfile  README.md  RELEASING.md  SECURITY.md  TOOLCHAIN_DESIGN.md  _typos.toml  acton-old-reformat.schema.json  acton.schema.json  biome.json  biome.jsonc  build.rs  bunfig.toml  clippy.toml  counter.tolk  counter2.tolk  counter_test.tolk  deny.toml  dist-workspace.toml  eslint.config.js  install.sh  justfile  main.tolk  mutation-rules.schema.json  netlify.toml  package.json  rustfmt.toml  script.tolk  toolchain-index.json  (+1 more)
crates/abi/: Cargo.toml
crates/abi/src/: abi_serde.rs  lib.rs  serde.rs
crates/acton-abi-catalog/: Cargo.toml  build.rs
crates/acton-abi-catalog/data/: data-abis.json
crates/acton-abi-catalog/src/: lib.rs
crates/acton-config/: Cargo.toml
crates/acton-config/schemas/: acton.schema.json  lint-report.schema.json
crates/acton-config/src/: color.rs  config.rs  lib.rs  lint_output.rs  mutation_rules.rs  schema.rs  test.rs
crates/acton-debug/: Cargo.toml
crates/acton-debug/src/: exit_codes.rs  lib.rs  replayer.rs  retrace.rs  types_render.rs
crates/acton-debug/src/commands/: mod.rs
crates/acton-debug/src/core/: any_executor.rs  debug_executor_handle.rs  evaluate.rs  exception_format.rs  mod.rs  replayer.rs  types_render.rs
crates/acton-debug/src/debugger/: dap.rs  mod.rs  replayer_session.rs  session.rs
crates/acton-debug/src/multi/: dap_transport.rs  mod.rs  replayer_session.rs  session.rs
crates/acton-debug/src/single/: dap.rs  mod.rs
crates/acton-debug/src/transport/: connection.rs  mod.rs  request_parser.rs
crates/acton-mdman/: Cargo.toml
crates/acton-mdman/src/: hbs.rs  lib.rs  util.rs
crates/acton-mdman/src/format/: man.rs  md.rs  mod.rs  text.rs
crates/acton-source-trace/: Cargo.toml
crates/acton-source-trace-wasm/: Cargo.toml
crates/acton-source-trace-wasm/src/: lib.rs
crates/acton-source-trace/src/: lib.rs
crates/arton-objs/: Cargo.toml  build.rs
crates/dap-client/: Cargo.toml
crates/dap-client/src/: lib.rs
crates/emulator/: Cargo.toml  build.rs
crates/emulator/src/: any_executor.rs  blockchain.rs  config.rs  emulator.rs  executor.rs  extensions.rs  get_executor.rs  lib.rs  step_by_step_trait.rs  step_executor.rs  step_get_executor.rs  tests.rs  traits.rs  utils.rs  world_state.rs
crates/emulator/src/remote/: mod.rs
crates/emulator/src/tuple/: stack.rs
crates/retrace/: Cargo.toml
crates/retrace/src/: lib.rs  methods.rs  remote.rs  runner.rs  tests.rs  trace.rs  types.rs
crates/tasm/: Cargo.toml
crates/tasm-core/: Cargo.toml
crates/tasm-core/spec/: tvm-specification.json
crates/tasm-core/src/: decompile.rs  lib.rs  printer.rs  spec.rs  types.rs
crates/tasm/src/: decompile.rs  printer.rs  spec.rs  types.rs
crates/tasm/src/func_decompile/: ast.rs  method_model.rs  mod.rs  pipeline.rs  render.rs  stage_patterns.rs  stage_rename.rs  stage_simplify.rs  stage_stack.rs
crates/tasm/tests/golden/: 01_arith.fc  03_while.fc  05_do_until.fc  06_throw.fc  07_func_call.fc  08_builder_slice.fc  counter.fc  counter2.fc  jetton-minter.fc  jetton-wallet.fc
crates/tolk-analysis/: Cargo.toml
crates/tolk-analysis/src/: lib.rs
crates/tolk-dataflow/: Cargo.toml
crates/tolk-dataflow/src/: builder.rs  cfg.rs  lib.rs
crates/tolk-linter/: Cargo.toml
crates/tolk-linter/src/: lib.rs
crates/tolk-linter/src/rules/: diagnostic.rs  mod.rs  violation.rs
crates/tolk-macros/: Cargo.toml
crates/tolk-macros/src/: lib.rs  map_codes.rs  rule_code_prefix.rs  violation_metadata.rs
crates/tolk-resolver/: Cargo.toml
crates/tolk-resolver/src/: file_db.rs  file_index.rs  lib.rs  project_index.rs  resolve_index.rs  resolve_tests.rs  symbol_resolver.rs
crates/tolk-source-map/: Cargo.toml
crates/tolk-source-map/src/: abi.rs  debug_marks_dict.rs  lib.rs  source_map.rs
crates/tolk-syntax/: Cargo.toml
crates/tolk-syntax/src/: errors.rs  lib.rs
crates/tolk-syntax/src/ast/: expressions.rs  macros.rs  mod.rs  node.rs  statements.rs  top_level.rs  traits.rs  (+3 more)
crates/tolk-ty/: Cargo.toml
crates/tolk-ty/src/: expression_inference.rs  flow_inference.rs  generics_helpers.rs  global_usages.rs  lib.rs  overload_resolution.rs  statement_inference.rs  type_db.rs  type_formatter.rs  type_inference.rs  type_interner.rs  type_substitutor.rs  type_unify.rs  types.rs
crates/tolk-ty/tests/: resolving.rs  type_inference.rs
crates/tolkc/: Cargo.toml  build.rs
crates/tolkc/src/: abi.rs  compiler.rs  debug_marks_dict.rs  lib.rs  source_map.rs  tolk_source_map.rs  types_kernel.rs  version.rs
crates/tolkfmt/: Cargo.toml
crates/tolkfmt/src/: comments.rs  common.rs  decls.rs  decls_tests.rs  exprs.rs  exprs_tests.rs  lib.rs  main.rs  stmts.rs  stmts_tests.rs  types.rs  types_tests.rs
crates/tolkfmt/tests/: common.rs  decls_tests.rs  exprs_tests.rs  fmt_ignore_tests.rs  grouping_tests.rs  lib.rs  stmts_tests.rs  tests.rs  types_tests.rs
crates/toml-syntax/: Cargo.toml
crates/toml-syntax/src/: lib.rs
crates/ton-abi/: Cargo.toml
crates/ton-abi/src/: abi_serde.rs  compiler_abi_serde.rs  lib.rs  snake_string.rs
crates/ton-api/: Cargo.toml
crates/ton-api/src/: lib.rs
crates/ton-emulator/: Cargo.toml
crates/ton-emulator/src/: emulator.rs  extensions.rs  lib.rs  tests.rs  world_state.rs
crates/ton-emulator/tests/: world_state_snapshot_tests.rs
crates/ton-executor/: Cargo.toml  build.rs
crates/ton-executor/src/: common.rs  config.rs  default-config.boc64  default_config.boc64  lib.rs  version.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
xtask/src/modules/: cache_cleanup.rs  git.rs  github.rs  mod.rs  release.rs  ubicloud.rs  workflow.rs
xtask/src/tasks/: deploy_explorer.rs  dist.rs  github_cleanup.rs  hello.rs  mod.rs  release.rs  retag.rs  schema.rs  sync_artifacts.rs  sync_artifacts_manifest.rs  toolchain_index.rs  ubicloud_cleanup.rs  update_default_config.rs  update_template_wrappers.rs
(+5371 files in other folders)
