[package]
name = "acton"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[workspace]
members = ["crates/*"]

exclude = [
    "crates/acton-test-ui",
]

[dependencies]
# local creates
acton-config = { path = "crates/acton-config" }
abi = { path = "crates/abi" }
tolkc = { path = "crates/tolkc" }
emulator = { path = "crates/emulator" }
ton-executor = { path = "crates/ton-executor" }
tolk-syntax = { path = "crates/tolk-syntax" }
tolk-resolver = { path = "crates/tolk-resolver" }
tolk-ty = { path = "crates/tolk-ty" }
tolk-linter = { path = "crates/tolk-linter" }
tvmffi = { path = "crates/tvmffi" }
vmlogs = { path = "crates/vmlogs" }
tasm = { path = "crates/tasm" }
dap-client = { path = "crates/dap-client" }
ton-api = { path = "crates/ton-api" }
retrace = { path = "crates/retrace" }
ton-source-map = { path = "crates/ton-source-map" }
tolkfmt = { path = "crates/tolkfmt" }

# remote crates
# base TON libraries
tonlib-core = "0.26.6"
tycho-types = "0.3.0"

num-bigint = "0.4.6"
num-traits = "0.2.19"

hex = "0.4.3"
crc = "3.3.0"
owo-colors = "4.2.3" # overall coloring
color-print = "0.3" # color format in CLI help
comfy-table = "7.1" # coverage table
tree-sitter = "0.25.10" # tolk parser
clap = { version = "4.5", features = ["derive"] } # CLI
anyhow = "1.0.100"

# test filtering
regex = "1.11.1"
globset = "0.4"

# formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

include_dir = "0.7" # include stdlib and Acton lib
inquire = "0.9.1" # for interactive cli
crossbeam-channel = "0.5.15" # dap communication
dap = "0.4.1-alpha1"
log = "0.4" # overall logging
fern = "0.7.1" # overall logging
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5" # test discovery
sha2 = "0.10" # for cache
fs2 = "0.4" # build cache locking
quick-junit = "0.5.2" # junit format for tests

# disasm for blockchain addresses
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
urlencoding = "2.1"
base64 = "0.22.1"
rand = "0.8"

tempfile = "3.23.0" # testing
dotenvy = "0.15.7"
pathdiff = "0.2.3"
strsim = "0.11.1"
clap_complete = { version = "4.5.61", features = ["unstable-dynamic"] }
human-panic = "2.0.5" # better panic handling

# acton up
semver = "1.0.27"
indicatif = "0.18.3"
flate2 = "1.1.5"
tar = "0.4.44"

# axum for test ui
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
opener = "0.7.2"

# acton wallet
hmac = "0.12.1"
pbkdf2 = "0.12.2"
toml_edit = "0.24.0"

tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "full"] }
once_cell = "1.21.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# acton fmt
similar = { version = "2.7.0", features = ["inline"] }

# actin check
codespan-reporting = "0.11.1"

[dev-dependencies]
snapbox = { version = "0.6.23", features = ["regex", "cmd", "dir", "term-svg"] }
strip-ansi-escapes = "0.2.1"
fs_extra = "1.3.0"
base64 = "0.22.1"
expect-test = "1"
tempfile = "3"

# save ~15% of size (29mb -> 23mb), but very slow to compile/link
[profile.release-size]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
#pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

use_self = "allow"
redundant_pub_crate = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
cognitive_complexity = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
fallible_impl_from = "allow"
unreadable_literal = "allow"
similar_names = "allow"
wildcard_imports = "allow"
implicit_hasher = "allow"
struct_field_names = "allow"
literal_string_with_formatting_args = "allow"
unwrap-used = "deny"
undocumented_unsafe_blocks = "deny"

[lints]
workspace = true

[features]
profile_rules = ["tolk-linter/profile_rules"] # for acton check
