[package]
name = "acton"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace]
members = ["crates/*"]

exclude = [
    "crates/acton-test-ui",
    "crates/acton-shared-ui",
    "crates/acton-litenode-ui",
    "crates/ffi-test",
]

[workspace.package]
version = "0.1.0"
authors = ["TON Core"]
edition = "2024"
rust-version = "1.90.0"
homepage = "https://i582.github.io/acton"
documentation = "https://i582.github.io/acton/docs/welcome"
repository = "https://github.com/i582/acton"
license = "MIT"

[workspace.dependencies]
# local crates
acton-config = { path = "crates/acton-config" }
tolkc = { path = "crates/tolkc" }
ton-abi = { path = "crates/ton-abi" }
ton-emulator = { path = "crates/ton-emulator" }
ton-executor = { path = "crates/ton-executor" }
tolk-syntax = { path = "crates/tolk-syntax" }
tolk-resolver = { path = "crates/tolk-resolver" }
tolk-ty = { path = "crates/tolk-ty" }
tolk-analysis = { path = "crates/tolk-analysis" }
tolk-linter = { path = "crates/tolk-linter" }
tolk-macros = { path = "crates/tolk-macros" }
tvmffi = { path = "crates/tvmffi" }
vmlogs = { path = "crates/vmlogs" }
tasm = { path = "crates/tasm" }
dap-client = { path = "crates/dap-client" }
ton-api = { path = "crates/ton-api" }
retrace = { path = "crates/retrace" }
ton-source-map = { path = "crates/ton-source-map" }
tolkfmt = { path = "crates/tolkfmt" }
ton-networks = { path = "crates/ton-networks" }
ton-litenode = { path = "crates/ton-litenode" }
ton-indexer = { path = "crates/ton-indexer" }

# remote crates
rusqlite = { version = "0.31", features = ["bundled"] }
# base TON libraries
tonlib-core = "0.26.6"
tycho-types = { version = "0.3.0", features = ["bigint"] }

num-bigint = "0.4.6"
num-traits = "0.2.19"

hex = "0.4.3"
crc = "3.3.0"
owo-colors = "4.2.3" # overall coloring
color-print = "0.3" # color format in CLI help
comfy-table = "7.1" # coverage table
tree-sitter = "0.25.10" # tolk parser
clap = { version = "4.5", features = ["derive"] } # CLI
anyhow = "1.0.100"

# test filtering
regex = "1.11.1"
globset = "0.4"

# formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

include_dir = "0.7" # include stdlib and Acton lib
inquire = "0.9.1" # for interactive cli
crossbeam-channel = "0.5.15" # dap communication
dap = "0.4.1-alpha1"
log = "0.4.29" # overall logging
fern = "0.7.1" # overall logging
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5" # test discovery
sha2 = "0.10" # for cache
fs2 = "0.4" # build cache locking
quick-junit = "0.5.2" # junit format for tests

# disasm for blockchain addresses
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
urlencoding = "2.1"
base64 = "0.22.1"
rand = "0.8"

tempfile = "3.10.1" # testing
dotenvy = "0.15.7"
pathdiff = "0.2.3"
strsim = "0.11.1"
clap_complete = { version = "4.5.61", features = ["unstable-dynamic"] }
human-panic = "2.0.5" # better panic handling

# acton up
semver = "1.0.27"
indicatif = "0.18.3"
flate2 = "1.1.5"
tar = "0.4.44"

# axum for test ui
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
opener = "0.8.4"

# acton wallet
hmac = "0.12.1"
pbkdf2 = "0.12.2"
ring = "0.17"
nacl = "0.5.3"
toml_edit = "0.24.0"

tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "full"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# acton fmt
similar = { version = "2.7.0", features = ["inline"] }

# actin check
codespan-reporting = "0.11.1"

# other
rustc-hash = "2.1.1"
smol_str = "0.3.5"
dashmap = "7.0.0-rc2"
expect-test = "1.5.0"
tree-sitter-tolk = "0.0.5"
memchr = "2.7.6"
pkg-config = "0.3.32"
thiserror = "2.0.18"
smallvec = "1.15.1"
bitflags = "2.9.4"
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["derive", "parsing", "extra-traits", "full"] }
itertools = "0.14.0"
heck = "0.5.0"
pretty = "0.12.5"
winnow = "0.7.13"
dunce = "1.0.5"

[dependencies]
# local creates
acton-config = { workspace = true }
tolkc = { workspace = true }
ton-abi = { workspace = true }
ton-emulator = { workspace = true }
ton-executor = { workspace = true }
tolk-syntax = { workspace = true }
tolk-resolver = { workspace = true }
tolk-ty = { workspace = true }
tolk-linter = { workspace = true }
tolk-ls = { path = "crates/tolk-ls" }
tower-lsp = "0.20"
dashmap = { workspace = true }
tvmffi = { workspace = true }
vmlogs = { workspace = true }
tasm = { workspace = true }
dap-client = { workspace = true }
ton-api = { workspace = true }
retrace = { workspace = true }
ton-source-map = { workspace = true }
tolkfmt = { workspace = true }
ton-litenode = { workspace = true }

# remote crates
# base TON libraries
tonlib-core = { workspace = true }
tycho-types = { workspace = true }

num-bigint = { workspace = true }
num-traits = { workspace = true }

hex = { workspace = true }
crc = { workspace = true }
owo-colors = { workspace = true } # overall coloring
color-print = { workspace = true } # color format in CLI help
comfy-table = { workspace = true } # coverage table
tree-sitter = { workspace = true } # tolk parser
clap = { workspace = true } # CLI
anyhow = { workspace = true }
dunce = { workspace = true }

# test filtering
regex = { workspace = true }
globset = { workspace = true }

# formats
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

include_dir = { workspace = true } # include stdlib and Acton lib
inquire = { workspace = true } # for interactive cli
crossbeam-channel = { workspace = true } # dap communication
dap = { workspace = true }
log = { workspace = true } # overall logging
fern = { workspace = true } # overall logging
chrono = { workspace = true }
walkdir = { workspace = true } # test discovery
sha2 = { workspace = true } # for cache
fs2 = { workspace = true } # build cache locking
quick-junit = { workspace = true } # junit format for tests

# disasm for blockchain addresses
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

tempfile = { workspace = true } # testing
dotenvy = { workspace = true }
pathdiff = { workspace = true }
strsim = { workspace = true }
clap_complete = { workspace = true }
human-panic = { workspace = true } # better panic handling

# acton up
semver = { workspace = true }
indicatif = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# axum for test ui
axum = { workspace = true }
tower-http = { workspace = true }
opener = { workspace = true }

# acton wallet
hmac = { workspace = true }
pbkdf2 = { workspace = true }
ring = { workspace = true }
nacl = { workspace = true }
toml_edit = { workspace = true }

tokio = { workspace = true }
keyring = { workspace = true }

# acton fmt
similar = { workspace = true }

# actin check
codespan-reporting = { workspace = true }
tracing-subscriber = "0.3.22"
rustc-hash = "2.1.1"
function_name = "0.3.0"

[dev-dependencies]
snapbox = { version = "0.6.23", features = ["regex", "cmd", "dir", "term-svg"] }
strip-ansi-escapes = "0.2.1"
fs_extra = "1.3.0"
base64 = { workspace = true }

# save ~15% of size (29mb -> 23mb), but very slow to compile/link
[profile.release-size]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
#pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

use_self = "allow"
redundant_pub_crate = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
cognitive_complexity = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
fallible_impl_from = "allow"
unreadable_literal = "allow"
similar_names = "allow"
wildcard_imports = "allow"
implicit_hasher = "allow"
struct_field_names = "allow"
literal_string_with_formatting_args = "allow"
unwrap-used = "deny"
undocumented_unsafe_blocks = "deny"

[lints]
workspace = true

[features]
profile_rules = ["tolk-linter/profile_rules"] # for acton check
profiling = ["tolk-ls/profiling"]

#[profile.release]
#debug = "full"
