[package]
name = "acton"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[package.metadata.dist]
dist = true

[workspace]
members = ["crates/*", "xtask"]

exclude = [
  "crates/acton-test-ui",
  "crates/acton-shared-ui",
  "crates/acton-localnet-ui",
]

[workspace.package]
version = "0.4.1"
authors = ["TON Core"]
edition = "2024"
rust-version = "1.94.1"
homepage = "https://ton-blockchain.github.io/acton"
documentation = "https://ton-blockchain.github.io/acton/docs/welcome"
repository = "https://github.com/ton-blockchain/acton"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# local crates
acton-config = { path = "crates/acton-config" }
acton-debug = { path = "crates/acton-debug" }
acton-mdman = { path = "crates/acton-mdman" }
ton-objs = { path = "crates/ton-objs" }
tolk-compiler = { path = "crates/tolk-compiler" }
ton-emulator = { path = "crates/ton-emulator" }
ton-executor = { path = "crates/ton-executor" }
tolk-syntax = { path = "crates/tolk-syntax" }
tasm-syntax = { path = "crates/tasm-syntax" }
fift-syntax = { path = "crates/fift-syntax" }
toml-syntax = { path = "crates/toml-syntax" }
tlb-syntax = { path = "crates/tlb-syntax" }
ton-json-schema = { path = "crates/ton-json-schema" }
ton-syntax = { path = "crates/ton-syntax" }
tolk-resolver = { path = "crates/tolk-resolver" }
tolk-ty = { path = "crates/tolk-ty" }
tolk-analysis = { path = "crates/tolk-analysis" }
tolk-linter = { path = "crates/tolk-linter" }
tolk-macros = { path = "crates/tolk-macros" }
tolk-dataflow = { path = "crates/tolk-dataflow" }
tvm-ffi = { path = "crates/tvm-ffi" }
tvm-logs = { path = "crates/tvm-logs" }
tasm-core = { path = "crates/tasm-core" }
dap-client = { path = "crates/dap-client" }
ton-api = { path = "crates/ton-api" }
ton-retrace = { path = "crates/ton-retrace" }
ton-source-map = { path = "crates/ton-source-map" }
tolk-fmt = { path = "crates/tolk-fmt" }
ton-networks = { path = "crates/ton-networks" }
ton-localnet = { path = "crates/ton-localnet" }
ton-ls = { path = "crates/ton-ls" }
ton-indexer = { path = "crates/ton-indexer" }
tree-sitter-tolk = { path = "crates/tree-sitter-tolk" }
tree-sitter-tasm = { path = "crates/tree-sitter-tasm" }
tree-sitter-fift = { path = "crates/tree-sitter-fift" }
tree-sitter-tlb = { path = "crates/tree-sitter-tlb" }
toncenter-keys = { path = "crates/toncenter-keys" }
tree-sitter-toml-ng = "0.7.0"
handlebars = { version = "6.4.0", features = ["dir_source"] }
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
url = "2.5.7"

# remote crates
rusqlite = { version = "0.31", features = ["bundled"] }
# base TON libraries
ton = "0.1.2"
tycho-types = { version = "0.3.0", features = ["bigint"] }

num-bigint = "0.4.6"
num-traits = "0.2.19"

hex = "0.4.3"
crc = "3.3.0"
owo-colors = "4.2.3" # overall coloring
comfy-table = "7.1" # coverage table
tree-sitter = "0.25.10" # tolk parser
clap = { version = "4.5", features = ["derive"] } # CLI
anyhow = "1.0.100"

# test filtering
regex = "1.11.1"
globset = "0.4"

# formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-sarif = "0.8.0"
schemars = { version = "0.8.22", features = ["derive"] }
toml = "0.9.8"
jsonschema = { version = "0.45.0", default-features = false }
referencing = "0.45.0"
jsonptr = "0.7.1"

include_dir = "0.7" # include stdlib and Acton lib
inquire = "0.9.1" # for interactive cli
crossbeam-channel = "0.5.15" # dap communication
dap = "0.4.1-alpha1"
log = "0.4.29" # overall logging
fern = "0.7.1" # overall logging
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5" # test discovery
sha2 = { version = "0.10", features = ["asm"] } # for cache; hardware SHA-256 backends
xxhash-rust = { version = "0.8.15", features = ["xxh3"] } # fast file content hash for cache
fs2 = "0.4" # build cache locking
quick-junit = "0.5.2" # junit format for tests

# disasm for blockchain addresses
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
urlencoding = "2.1"
base64 = "0.22.1"
rand = "0.8"
machine-uid = "0.5.4"

tempfile = "3.10.1" # testing
dotenvy = "0.15.7"
pathdiff = "0.2.3"
strsim = "0.11.1"
clap_complete = { version = "4.6.1", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.6.0"
human-panic = "2.0.5" # better panic handling
crash-handler = "0.7.0" # low-level fatal signal/exception handling
ctrlc = "3.4.5" # graceful Ctrl+C handling

# acton up
semver = "1.0.27"
indicatif = "0.18.3"
flate2 = "1.1.5"
tar = "0.4.44"

# axum for test ui
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tower_governor = "0.8.0"
opener = "0.8.4"

# acton wallet
hmac = "0.12.1"
ring = "0.17"
ed25519-dalek = "2.2.0"
toml_edit = "0.24.0"

tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "full"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# acton fmt
similar = { version = "2.7.0", features = ["inline"] }

# actin check
codespan-reporting = "0.11.1"

# acton ls
tower-lsp = "0.20"
lsp-types = "0.94.1"
tree-sitter-language = "0.1"

# other
rustc-hash = "2.1.1"
smol_str = "0.3.5"
dashmap = "7.0.0-rc2"
expect-test = "1.5.0"
memchr = "2.7.6"
pkg-config = "0.3.32"
thiserror = "2.0.18"
smallvec = "1.15.1"
bitflags = "2.9.4"
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["derive", "parsing", "extra-traits", "full"] }
itertools = "0.14.0"
heck = "0.5.0"
winnow = "0.7.13"
dunce = "1.0.5"
path-absolutize = "3.1.1"
tracing = "0.1"
function_name = "0.3.0"
parking_lot = "0.12.5"

cc = "1.2"

[dependencies]
# local crates
acton-config = { workspace = true }
acton-debug = { workspace = true }
acton-mdman = { workspace = true }
tolk-compiler = { workspace = true }
ton-emulator = { workspace = true }
ton-executor = { workspace = true }
tolk-syntax = { workspace = true }
tolk-resolver = { workspace = true }
tolk-ty = { workspace = true }
tolk-linter = { workspace = true }
ton-ls = { workspace = true }
tower-lsp = { workspace = true }
dashmap = { workspace = true }
tvm-ffi = { workspace = true }
tvm-logs = { workspace = true }
tasm-core = { workspace = true }
ton-api = { workspace = true }
ton-retrace = { workspace = true }
ton-source-map = { workspace = true }
tolk-fmt = { workspace = true }
ton-localnet = { workspace = true }

# remote crates
# base TON libraries
ton = { workspace = true }
tycho-types = { workspace = true }

num-bigint = { workspace = true }
num-traits = { workspace = true }

hex = { workspace = true }
crc = { workspace = true }
comfy-table = { workspace = true } # coverage table
tree-sitter = { workspace = true } # tolk parser
clap = { workspace = true } # CLI
anyhow = { workspace = true }
dunce = { workspace = true }
heck = { workspace = true }

# test filtering
regex = { workspace = true }
globset = { workspace = true }

# formats
serde = { workspace = true }
serde_json = { workspace = true }
serde-sarif = { workspace = true }
toml = { workspace = true }

include_dir = { workspace = true } # include stdlib and Acton lib
inquire = { workspace = true } # for interactive cli
crossbeam-channel = { workspace = true }
log = { workspace = true } # overall logging
fern = { workspace = true } # overall logging
chrono = { workspace = true }
walkdir = { workspace = true } # test discovery
sha2 = { workspace = true } # for cache
xxhash-rust = { workspace = true } # fast file content hash for cache
fs2 = { workspace = true } # build cache locking
quick-junit = { workspace = true } # junit format for tests

# disasm for blockchain addresses
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
machine-uid = { workspace = true }

tempfile = { workspace = true } # testing
dotenvy = { workspace = true }
pathdiff = { workspace = true }
strsim = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
human-panic = { workspace = true } # better panic handling
crash-handler = { workspace = true } # low-level fatal signal/exception handling
ctrlc = { workspace = true } # graceful Ctrl+C handling

# acton up
semver = { workspace = true }
indicatif = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# axum for test ui
axum = { workspace = true }
tower-http = { workspace = true }
opener = { workspace = true }

# acton wallet
hmac = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
toml_edit = { workspace = true }

tokio = { workspace = true }
keyring = { workspace = true }

# acton fmt
similar = { workspace = true }

# actin check
codespan-reporting = { workspace = true }
rustc-hash = { workspace = true }
path-absolutize = { workspace = true }

[dev-dependencies]
snapbox = { version = "0.6.23", features = ["regex", "cmd", "dir", "term-svg"] }
strip-ansi-escapes = "0.2.1"
fs_extra = "1.3.0"
base64 = { workspace = true }
expect-test = { workspace = true }
expectrl = "0.5.2"
dap-client = { workspace = true }
function_name = { workspace = true }
owo-colors = { workspace = true } # overall coloring
dap = { workspace = true }
toncenter-keys = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# save ~15% of size (29mb -> 23mb), but very slow to compile/link
[profile.release-size]
inherits = "release"
lto = "fat"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release-size"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
#pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

elidable_lifetime_names = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_raw_string_hashes = "warn"
format_push_string = "warn"
doc_markdown = "warn"
redundant_closure_for_method_calls = "warn"
uninlined_format_args = "warn"
trivially_copy_pass_by_ref = "warn"
match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
assigning_clones = "warn"
ref_option = "warn"
wildcard_imports = "warn"

option_option = "allow"
use_self = "allow"
redundant_pub_crate = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
option_if_let_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
cognitive_complexity = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
fallible_impl_from = "allow"
unreadable_literal = "allow"
similar_names = "allow"
implicit_hasher = "allow"
struct_field_names = "allow"
literal_string_with_formatting_args = "allow"
ignored_unit_patterns = "allow"
unwrap-used = "deny"
undocumented_unsafe_blocks = "deny"

[lints]
workspace = true

[features]
profile_rules = ["tolk-linter/profile_rules"] # for acton check
profiling = ["ton-ls/profiling"]
only_ci = []

[lib]
doctest = false

#[profile.release]
#debug = "full"
