[package]
name = "abi"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.10"
tolk-parser = { path = "../tolk-parser" }
crc = "3.2"
num-bigint = "0.4.6"
anyhow = "1.0.100"
tycho-types = { version = "0.3.0", features = ["bigint"] }
serde = { version = "1.0", features = ["derive"] }
