[package]
name = "acton-config"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }
ton-networks = { workspace = true }
owo-colors = { workspace = true }
path-absolutize = { workspace = true }

[lints]
workspace = true
