[package]
name = "acton-debug"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
dap = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tolk-syntax = { workspace = true }
tolkc = { workspace = true }
ton-abi = { workspace = true }
ton-executor = { workspace = true }
tvmffi = { workspace = true }
tycho-types = { workspace = true }
vmlogs = { workspace = true }

[lints]
workspace = true
