[package]
name = "acton-debug"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
dap = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
serde_json = { workspace = true }
tolk-syntax = { workspace = true }
tolk-compiler = { workspace = true }
ton-abi = { workspace = true }
ton-executor = { workspace = true }
tvm-ffi = { workspace = true }
tycho-types = { workspace = true }
tvm-logs = { workspace = true }

[lints]
workspace = true
