[package]
name = "acton-debug"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
dap = { workspace = true, optional = true }
log = { workspace = true }
num-bigint = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
tolk-syntax = { workspace = true, optional = true }
tolk-source-map = { workspace = true }
ton-executor = { workspace = true, optional = true }
tvm-ffi = { workspace = true }
tycho-types = { workspace = true }
tvm-logs = { workspace = true }

[features]
default = ["dap-server", "live-vm"]
dap-server = ["dep:crossbeam-channel", "dep:dap", "dep:tolk-syntax", "live-vm"]
live-vm = ["dep:ton-executor"]

[lints]
workspace = true
