[package]
name = "acton-source-trace-wasm"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
acton-source-trace = { workspace = true }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true }

[lints]
workspace = true
