[package]
name = "dap-client"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
dap = { workspace = true, features = ["client"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
