[package]
name = "emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
abi = { path = "../abi" }
tvmffi = { path = "../tvmffi" }
ton-executor = { path = "../ton-executor" }
tycho-types = { version = "0.3.0", features = ["bigint"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tonlib-core = "0.26.2"
anyhow = "1.0.100"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
reqwest = { version = "0.12.24", features = ["blocking"] }

[lints]
workspace = true
