[package]
name = "retrace"
version = "0.1.0"
edition = "2024"

[dependencies]
emulator = { path = "../emulator" }

tycho-types = "0.3.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
anyhow = "1.0.100"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dotenvy = "0.15"
urlencoding = "2.1"
hex = "0.4"
vmlogs = { path = "../vmlogs" }
