[package]
name = "retrace"
version = "0.1.0"
edition = "2024"

[dependencies]
ton-executor = { path = "../ton-executor" }
vmlogs = { path = "../vmlogs" }

tycho-types = "0.3.0"
num-bigint = "0.4.6"
anyhow = "1.0.100"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
