[package]
name = "tolk-analysis"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tolk-syntax = { workspace = true }
tolk-resolver = { workspace = true }
tolk-ty = { workspace = true }
tolk-dataflow = { workspace = true }
rustc-hash = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
