[package]
name = "tolk-linter"
version = "0.1.0"
edition = "2024"

[dependencies]
tolk-syntax = { path = "../tolk-syntax" }
tolk-resolver = { path = "../tolk-resolver" }
tolk-ty = { path = "../tolk-ty" }
tolk-analysis = { path = "../tolk-analysis" }
tolk-macros = { path = "../tolk-macros" }
tree-sitter = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
log = "0.4.29"
rustc-hash = "2.1.1"
memchr = "2.7.6"

[features]
profile_rules = []
